--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2>Welcome to my color picker</h2>
+        <h2>Discover colors with ChromaSelector</h2>
         <button class="changecolorbtn">Pick Color</button>
         <div class="selectedcolor">
             <span class="colorgrid"></span>
